Connector in node editors cannot connect when too close #87829

Closed
opened 2021-04-26 14:30:17 +02:00 by Sebastien Larocque · 8 comments

System Information
Operating system: Windows-10-10.0.19041-SP0 64 Bits
Graphics card: GeForce GTX 1070/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 457.30

Blender Version
Broken: version: 2.92.0, branch: master, commit date: 2021-02-24 16:25, hash: 02948a2cab
Worked: Never as far I as know.

Short description of error
Connector in node editors cannot connect when too close

Exact steps for others to reproduce the error

  • Use the project attached.

  • Go in the Shading tab.

  • Try to connect a node connector to another connector at the right where the distance on the background grid is less than square. It will not connect.

  • You can also try to connect two nodes by yourself.

  • Use Shift + right mouse drag across to create an intermediate node very near the end at the right of the connection.

  • Disconnect the right part.

  • Try to connect it again and will not connect if the distance is very short.

I tested this behavior in the Shading and Compositing tab. Other places like the Geometry editor are probably affected.

CloseConnectorTooClose.blend

CloseConnectorTooClose.mp4

**System Information** Operating system: Windows-10-10.0.19041-SP0 64 Bits Graphics card: GeForce GTX 1070/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 457.30 **Blender Version** Broken: version: 2.92.0, branch: master, commit date: 2021-02-24 16:25, hash: `02948a2cab` Worked: Never as far I as know. **Short description of error** Connector in node editors cannot connect when too close **Exact steps for others to reproduce the error** * Use the project attached. * Go in the Shading tab. * Try to connect a node connector to another connector at the right where the distance on the background grid is less than square. It will not connect. * You can also try to connect two nodes by yourself. * Use Shift + right mouse drag across to create an intermediate node very near the end at the right of the connection. * Disconnect the right part. * Try to connect it again and will not connect if the distance is very short. I tested this behavior in the Shading and Compositing tab. Other places like the Geometry editor are probably affected. [CloseConnectorTooClose.blend](https://archive.blender.org/developer/F10039156/CloseConnectorTooClose.blend) [CloseConnectorTooClose.mp4](https://archive.blender.org/developer/F10039153/CloseConnectorTooClose.mp4)

Added subscriber: @SebBlender

Added subscriber: @SebBlender
Member

Added subscriber: @filedescriptor

Added subscriber: @filedescriptor
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

I can confirm this on the latest 3.0.0 Alpha, branch: master, commit date: 2021-04-27 03:23, hash: 542f022afd. Will mark this as a UI papercut.

I can confirm this on the latest 3.0.0 Alpha, branch: master, commit date: 2021-04-27 03:23, hash: `542f022afd`. Will mark this as a UI papercut.

Added subscriber: @dominikfill

Added subscriber: @dominikfill

Hey, submitted a patch for this here: [D14122 ](https://developer.blender.org/D14122)

Hey, submitted a patch for this here: [[D14122](https://archive.blender.org/developer/D14122) ](https://developer.blender.org/D14122)

This issue was referenced by d9d97db018

This issue was referenced by d9d97db018d28f4c1ce7543ba275a9809d56294a
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Hans Goudey self-assigned this 2022-02-18 19:24:09 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#87829
No description provided.